# xbitfinal

./: Dockerfile  Procfile  config.py  heroku.yml  pyproject.toml  start
.github/: README.md
AnonXMusic/: __main__.py
AnonXMusic/core/: call.py  mongo.py
AnonXMusic/plugins/admins/: callback.py
AnonXMusic/plugins/bot/: help.py  settings.py  start.py
AnonXMusic/plugins/misc/: ginfo.py
AnonXMusic/plugins/play/: play.py
AnonXMusic/utils/inline/: __init__.py  help.py  play.py  start.py  test_style.py
AnonXMusic/utils/stream/: stream.py
strings/langs/: en.yml
