
[project]
name = "music"
version = "0.1.0"
description = "Music Bot repo"
readme = ".github/README.md"
requires-python = ">=3.11"

dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.7.0",
    "ffmpeg-python>=0.2.0",
    "gitpython>=3.1.40",
    "hachoir>=3.2.0",
    "heroku3>=5.2.0",
    "httpx>=0.28.1",

    # REQUIRED FOR COLORED BUTTONS
    "kurigram>=2.2.23",

    "motor>=3.7.1",
    "numpy>=1.26.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "psutil>=6.1.0",
    "py-tgcalls>=2.2.0",
    "pymongo>=4.9.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "speedtest-cli>=2.1.3",
    "spotipy>=2.25.1",
    "tgcrypto>=1.2.5 ; sys_platform != 'win32'",
    "unidecode>=1.3.8",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
    "yt-dlp[default]>=2025.6.9",
    "yt-search-py>=1.0.0",
]

[dependency-groups]
dev = []
